rregadmin/registry/registry.h

/** Create a new registry.
 *
 * @ingroup registry_registry_group
 */
Registry* registry_new(void) G_GNUC_WARN_UNUSED_RESULT;
/** Create a registry and load the standard hives from the windows
 * directory.
 *
 * @see registry_load_win_dir
 *
 * @ingroup registry_registry_group
 */
Registry *registry_new_win_dir(const char *in_dir) G_GNUC_WARN_UNUSED_RESULT;
/** Delete a registry.
 *
 * @ingroup registry_registry_group
 */
gboolean registry_free(Registry *in_reg);
/** Load the standard hives from the windows directory.
 *
 * This group of hives is:
 * - system32/config/systemprofile/ntuser.dat
 * - system32/config/default
 * - system32/config/SAM
 * - system32/config/SECURITY
 * - system32/config/software
 * - system32/config/system
 * - system32/config/userdiff
 * Some missing hives are ignored.
 *
 * @ingroup registry_registry_group
 */
gboolean registry_load_win_dir(Registry *in_reg, const char *in_dir);
/** Load a hive into the registry.
 *
 * It will be mounted into the tree at a hive type specific location.
 *
 * @ingroup registry_registry_group
 */
hive_id registry_load_hive(Registry *in_reg, const char *in_filename);
/** Load a hive into the registry specifying a mount location.
 *
 * @ingroup registry_registry_group
 */
hive_id registry_load_hive_full(Registry *in_reg, const char *in_filename,
                                const char *in_mount_point);
/** Unload a hive by hive_id.
 *
 * \note This fails if the hive is modified.
 *
 * @ingroup registry_registry_group
 */
gboolean registry_unload(Registry *in_reg, hive_id in_id);
/** Unload all hives.
 *
 * \note This fails if any hives are modified.
 *
 * @ingroup registry_registry_group
 */
gboolean registry_unload_all(Registry *in_reg);
/** Unload all hives even if they are modified.
 *
 * @ingroup registry_registry_group
 */
gboolean registry_unload_all_force(Registry *in_reg);
/** Write out any modified hives.
 *
 * Only hives that have been modified will be written out.
 *
 * @ingroup registry_registry_group
 */
gboolean registry_flush_all(Registry *in_reg);
/** Write out hive if it has been modified.
 *
 * @ingroup registry_registry_group
 */
gboolean registry_flush(Registry *in_reg, hive_id in_id);