python/rregadmin/registry/registry_wrapper.py

# generated by 'xml2py'
# flags '-c -d -v -k defst -lrregadmin -m rregadmin.util.glib_wrapper -m rregadmin.util.icu_wrapper -m rregadmin.util.path_wrapper -m rregadmin.util.icu_wrapper -m rregadmin.util.path_info_wrapper -m rregadmin.util.ustring_wrapper -m rregadmin.util.offset_wrapper -m rregadmin.util.value_wrapper -m rregadmin.util.ustring_list_wrapper -m rregadmin.hive.types_wrapper -m rregadmin.registry.types_wrapper -r ^ID_HKEY.* -r ^registry_.* -o registry_wrapper.py registry_wrapper.xml'
from ctypes import *

from rregadmin.registry.types_wrapper import Registry
_libraries = {}
_libraries['librregadmin.so.1'] = CDLL('librregadmin.so.1')
STRING = c_char_p
from rregadmin.util.ustring_list_wrapper import gboolean
from rregadmin.registry.types_wrapper import hive_id
from rregadmin.registry.types_wrapper import RegistryKey
from rregadmin.registry.types_wrapper import reg_id
from rregadmin.hive.types_wrapper import KeyCell
from rregadmin.hive.types_wrapper import ValueKeyCell
from rregadmin.util.value_wrapper import Value
from rregadmin.util.offset_wrapper import gint
from rregadmin.registry.types_wrapper import hive_info
from rregadmin.hive.types_wrapper import Hive
from rregadmin.util.ustring_list_wrapper import ustring


# ../../../rregadmin/registry/registry.h 95
registry_new = _libraries['librregadmin.so.1'].registry_new
registry_new.restype = POINTER(Registry)
# registry_new()
registry_new.argtypes = []
registry_new.__doc__ = \
"""Registry * registry_new()
../../../rregadmin/registry/registry.h:95"""
# ../../../rregadmin/registry/registry.h 104
registry_new_win_dir = _libraries['librregadmin.so.1'].registry_new_win_dir
registry_new_win_dir.restype = POINTER(Registry)
# registry_new_win_dir(in_dir)
registry_new_win_dir.argtypes = [STRING]
registry_new_win_dir.__doc__ = \
"""Registry * registry_new_win_dir(unknown * in_dir)
../../../rregadmin/registry/registry.h:104"""
# ../../../rregadmin/registry/registry.h 110
registry_free = _libraries['librregadmin.so.1'].registry_free
registry_free.restype = gboolean
# registry_free(in_reg)
registry_free.argtypes = [POINTER(Registry)]
registry_free.__doc__ = \
"""gboolean registry_free(Registry * in_reg)
../../../rregadmin/registry/registry.h:110"""
# ../../../rregadmin/registry/registry.h 126
registry_load_win_dir = _libraries['librregadmin.so.1'].registry_load_win_dir
registry_load_win_dir.restype = gboolean
# registry_load_win_dir(in_reg, in_dir)
registry_load_win_dir.argtypes = [POINTER(Registry), STRING]
registry_load_win_dir.__doc__ = \
"""gboolean registry_load_win_dir(Registry * in_reg, unknown * in_dir)
../../../rregadmin/registry/registry.h:126"""
# ../../../rregadmin/registry/registry.h 134
registry_load_hive = _libraries['librregadmin.so.1'].registry_load_hive
registry_load_hive.restype = hive_id
# registry_load_hive(in_reg, in_filename)
registry_load_hive.argtypes = [POINTER(Registry), STRING]
registry_load_hive.__doc__ = \
"""hive_id registry_load_hive(Registry * in_reg, unknown * in_filename)
../../../rregadmin/registry/registry.h:134"""
# ../../../rregadmin/registry/registry.h 141
registry_load_hive_full = _libraries['librregadmin.so.1'].registry_load_hive_full
registry_load_hive_full.restype = hive_id
# registry_load_hive_full(in_reg, in_filename, in_mount_point)
registry_load_hive_full.argtypes = [POINTER(Registry), STRING, STRING]
registry_load_hive_full.__doc__ = \
"""hive_id registry_load_hive_full(Registry * in_reg, unknown * in_filename, unknown * in_mount_point)
../../../rregadmin/registry/registry.h:141"""
# ../../../rregadmin/registry/registry.h 149
registry_unload = _libraries['librregadmin.so.1'].registry_unload
registry_unload.restype = gboolean
# registry_unload(in_reg, in_id)
registry_unload.argtypes = [POINTER(Registry), hive_id]
registry_unload.__doc__ = \
"""gboolean registry_unload(Registry * in_reg, hive_id in_id)
../../../rregadmin/registry/registry.h:149"""
# ../../../rregadmin/registry/registry.h 157
registry_unload_all = _libraries['librregadmin.so.1'].registry_unload_all
registry_unload_all.restype = gboolean
# registry_unload_all(in_reg)
registry_unload_all.argtypes = [POINTER(Registry)]
registry_unload_all.__doc__ = \
"""gboolean registry_unload_all(Registry * in_reg)
../../../rregadmin/registry/registry.h:157"""
# ../../../rregadmin/registry/registry.h 163
registry_unload_all_force = _libraries['librregadmin.so.1'].registry_unload_all_force
registry_unload_all_force.restype = gboolean
# registry_unload_all_force(in_reg)
registry_unload_all_force.argtypes = [POINTER(Registry)]
registry_unload_all_force.__doc__ = \
"""gboolean registry_unload_all_force(Registry * in_reg)
../../../rregadmin/registry/registry.h:163"""
# ../../../rregadmin/registry/registry.h 171
registry_flush_all = _libraries['librregadmin.so.1'].registry_flush_all
registry_flush_all.restype = gboolean
# registry_flush_all(in_reg)
registry_flush_all.argtypes = [POINTER(Registry)]
registry_flush_all.__doc__ = \
"""gboolean registry_flush_all(Registry * in_reg)
../../../rregadmin/registry/registry.h:171"""
# ../../../rregadmin/registry/registry.h 177
registry_flush = _libraries['librregadmin.so.1'].registry_flush
registry_flush.restype = gboolean
# registry_flush(in_reg, in_id)
registry_flush.argtypes = [POINTER(Registry), hive_id]
registry_flush.__doc__ = \
"""gboolean registry_flush(Registry * in_reg, hive_id in_id)
../../../rregadmin/registry/registry.h:177"""
